# pantry-cli

./: .stack-all  README.md  TODO  cabal.project  pantry-cli.cabal  stack.yaml
.github/workflows/: build.yml
src/: Main.hs
